--- a/index.html
+++ b/index.html
@@ -41,16 +41,25 @@
         </div>
       </section>
 
-      <!-- Combined section for LinkedIn, Trailhead, and Email -->
+      <!-- Combined section for LinkedIn, GitHub, Trailhead, and Email -->
       <section id="contact" class="contact-section">
         <div class="container">
           <p>
             <a
               href="https://www.linkedin.com/in/karthikeyan-s-47822b190"
               target="_blank"
-              ><i class="fab fa-linkedin fa-lg"></i
-            ></a>
+            >
+              <i class="fab fa-linkedin fa-lg"></i>
+            </a>
             <!-- LinkedIn icon with increased size -->
+            <a
+              href="https://github.com/karthikns03"
+              target="_blank"
+              style="margin-left: 10px"
+            >
+              <i class="fab fa-github fa-lg"></i>
+              <!-- GitHub icon with increased size -->
+            </a>
             <a
               href="https://www.salesforce.com/trailblazer/karthikns0309"
               target="_blank"
@@ -60,7 +69,6 @@
                 alt="Trailhead Icon"
                 class="trailhead-icon"
               />
-              <!-- Replace "trailhead-1.png" with the actual path to your image -->
             </a>
             <a href="mailto:karthikeyan.shanmugam03@gmail.com">
               <i class="fas fa-envelope fa-lg"></i>
