--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Your Portfolio</title>
+    <title>Karthikeyan S</title>
   </head>
   <body>
     <div class="main-container">
