--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
             Salesforce Certified Developer || Salesforce Certified Administrator
           </h2>
           <p>
-            Trailhead Expeditioner with 90,050 points and completed 16x
-            Superbadges.
+            Trailhead Expeditioner || Completed 16x Superbadges.
           </p>
           <p>And I ❤️ Ps5</p>
         </div>
@@ -64,12 +63,9 @@
               href="https://www.salesforce.com/trailblazer/karthikns0309"
               target="_blank"
             >
-              <img
-                src="trailhead-1.png"
-                alt="Trailhead Icon"
-                class="trailhead-icon"
-              />
+              <i class="fab fa-salesforce fa-lg"></i>
             </a>
+            <!-- Salesforce icon with increased size -->
             <a href="mailto:karthikeyan.shanmugam03@gmail.com">
               <i class="fas fa-envelope fa-lg"></i>
               <!-- Email icon -->
@@ -77,6 +73,9 @@
           </p>
         </div>
       </section>
-    </div>
+
+      <!-- Background music (autoplay) -->
+
+    <script src="main.js"></script>
   </body>
 </html>
